// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> should render ProgressBar with default props 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="space-between"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      marginRight="spacing.5"
      style={
        Array [
          Object {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        flexWrap="wrap"
        gap="spacing.0"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subdued.lowContrast"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="bold"
          lineHeight="s"
          style={
            Array [
              Object {
                "color": "hsla(217, 18%, 45%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "700",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Label
        </Text>
        <View
          style={
            Array [
              Object {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            color="surface.text.normal.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight="l"
            style={
              Array [
                Object {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Label"
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-1"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render ProgressBar without label and percentage 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  />,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 50,
        "text": "50%",
      }
    }
    id="progress-7"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={50}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "50%",
            },
            Object {
              "width": "50%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render high contrast ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.highContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 19%, 89%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-9"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(214, 21%, 94%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(214, 21%, 94%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render high contrast information intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.highContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 19%, 89%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-17"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(214, 21%, 94%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(214, 21%, 94%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(193, 100%, 35%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(193, 100%, 35%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render high contrast negative intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.highContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 19%, 89%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-13"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(214, 21%, 94%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(214, 21%, 94%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(8, 73%, 47%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(8, 73%, 47%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render high contrast neutral intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.highContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 19%, 89%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-19"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(214, 21%, 94%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(214, 21%, 94%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(216, 33%, 29%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(216, 33%, 29%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render high contrast notice intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.highContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 19%, 89%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-15"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(214, 21%, 94%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(214, 21%, 94%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(38, 97%, 38%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(38, 97%, 38%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render high contrast positive intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.highContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(216, 19%, 89%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-11"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(214, 21%, 94%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(214, 21%, 94%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(160, 100%, 26%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(160, 100%, 26%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render low contrast information intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-16"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(193, 100%, 35%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(193, 100%, 35%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render low contrast negative intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-12"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(8, 73%, 47%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(8, 73%, 47%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render low contrast neutral intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-18"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(216, 33%, 29%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(216, 33%, 29%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render low contrast notice intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-14"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(38, 97%, 38%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(38, 97%, 38%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render low contrast positive intent ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-10"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(160, 100%, 26%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(160, 100%, 26%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render medium size ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="space-between"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      marginRight="spacing.5"
      style={
        Array [
          Object {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        flexWrap="wrap"
        gap="spacing.0"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subdued.lowContrast"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="bold"
          lineHeight="s"
          style={
            Array [
              Object {
                "color": "hsla(217, 18%, 45%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "700",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Label
        </Text>
        <View
          style={
            Array [
              Object {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            color="surface.text.normal.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight="l"
            style={
              Array [
                Object {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Label"
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-6"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="4px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 4,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render meter variant of ProgressBar  1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="flex-end"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  />,
  <View
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 70,
        "text": "70",
      }
    }
    id="meter-8"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={70}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "70%",
            },
            Object {
              "width": "70%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should render small size ProgressBar 1`] = `
Array [
  <View
    display="flex"
    flexDirection="row"
    justifyContent="space-between"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      marginRight="spacing.5"
      style={
        Array [
          Object {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        flexWrap="wrap"
        gap="spacing.0"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subdued.lowContrast"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="bold"
          lineHeight="s"
          style={
            Array [
              Object {
                "color": "hsla(217, 18%, 45%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "700",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Label
        </Text>
        <View
          style={
            Array [
              Object {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            color="surface.text.normal.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight="l"
            style={
              Array [
                Object {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        20%
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Label"
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 20,
        "text": "20%",
      }
    }
    id="progress-5"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={20}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "20%",
            },
            Object {
              "width": "20%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should update the progress value appropriately 1`] = `
Array [
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    activeBackgroundColor="hsla(227, 100%, 45%, 1)"
    activeBorderColor="hsla(227, 100%, 45%, 1)"
    borderRadius="2px"
    borderWidth="1px"
    buttonPaddingBottom="0px"
    buttonPaddingLeft="20px"
    buttonPaddingRight="20px"
    buttonPaddingTop="0px"
    collapsable={false}
    defaultBackgroundColor="hsla(213, 89%, 56%, 1)"
    defaultBorderColor="hsla(213, 89%, 56%, 1)"
    focusBackgroundColor="hsla(223, 95%, 48%, 1)"
    focusBorderColor="hsla(223, 95%, 48%, 1)"
    focusRingColor="hsla(218, 89%, 51%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(218, 89%, 51%, 1)"
    hoverBorderColor="hsla(218, 89%, 51%, 1)"
    isFullWidth={false}
    isLoading={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard.effective"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(213, 89%, 56%, 1)",
          "borderColor": "hsla(213, 89%, 56%, 1)",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 1,
          "cursor": "pointer",
          "minHeight": 36,
          "paddingBottom": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 0,
          "width": "auto",
        },
        Object {
          "backgroundColor": "hsla(213, 89%, 56%, 1)",
          "borderColor": "hsla(213, 89%, 56%, 1)",
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flex={1}
      flexDirection="row"
      isHidden={false}
      justifyContent="center"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        color="action.text.primary.default"
        fontSize={100}
        fontWeight="bold"
        lineHeight="l"
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        Update Progress
      </Text>
    </View>
  </View>,
  <View
    display="flex"
    flexDirection="row"
    justifyContent="space-between"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      marginRight="spacing.5"
      style={
        Array [
          Object {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        flexWrap="wrap"
        gap="spacing.0"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subdued.lowContrast"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="bold"
          lineHeight="s"
          style={
            Array [
              Object {
                "color": "hsla(217, 18%, 45%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "700",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Label
        </Text>
        <View
          style={
            Array [
              Object {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            color="surface.text.normal.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight="l"
            style={
              Array [
                Object {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        0%
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Label"
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 0,
        "text": "0%",
      }
    }
    id="progress-3"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={0}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "0%",
            },
            Object {
              "width": "0%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`<ProgressBar /> should update the progress value appropriately 2`] = `
Array [
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    activeBackgroundColor="hsla(227, 100%, 45%, 1)"
    activeBorderColor="hsla(227, 100%, 45%, 1)"
    borderRadius="2px"
    borderWidth="1px"
    buttonPaddingBottom="0px"
    buttonPaddingLeft="20px"
    buttonPaddingRight="20px"
    buttonPaddingTop="0px"
    collapsable={false}
    defaultBackgroundColor="hsla(213, 89%, 56%, 1)"
    defaultBorderColor="hsla(213, 89%, 56%, 1)"
    focusBackgroundColor="hsla(223, 95%, 48%, 1)"
    focusBorderColor="hsla(223, 95%, 48%, 1)"
    focusRingColor="hsla(218, 89%, 51%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(218, 89%, 51%, 1)"
    hoverBorderColor="hsla(218, 89%, 51%, 1)"
    isFullWidth={false}
    isLoading={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard.effective"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "hsla(213, 89%, 56%, 1)",
          "borderColor": "hsla(213, 89%, 56%, 1)",
          "borderRadius": 2,
          "borderStyle": "solid",
          "borderWidth": 1,
          "cursor": "pointer",
          "minHeight": 36,
          "paddingBottom": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 0,
          "width": "auto",
        },
        Object {
          "backgroundColor": "hsla(213, 89%, 56%, 1)",
          "borderColor": "hsla(213, 89%, 56%, 1)",
        },
      ]
    }
  >
    <View
      alignItems="center"
      display="flex"
      flex={1}
      flexDirection="row"
      isHidden={false}
      justifyContent="center"
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        color="action.text.primary.default"
        fontSize={100}
        fontWeight="bold"
        lineHeight="l"
        style={
          Array [
            Object {
              "color": "hsla(0, 0%, 100%, 1)",
              "fontFamily": "Lato",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 24,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textAlign": "center",
              "textDecorationLine": "none",
            },
          ]
        }
        textAlign="center"
      >
        Update Progress
      </Text>
    </View>
  </View>,
  <View
    display="flex"
    flexDirection="row"
    justifyContent="space-between"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      marginBottom="spacing.2"
      marginRight="spacing.5"
      style={
        Array [
          Object {
            "marginBottom": 4,
            "marginRight": 16,
          },
        ]
      }
    >
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        flexWrap="wrap"
        gap="spacing.0"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 0,
            },
          ]
        }
      >
        <Text
          color="surface.text.subdued.lowContrast"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="bold"
          lineHeight="s"
          style={
            Array [
              Object {
                "color": "hsla(217, 18%, 45%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "700",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
              Object {},
            ]
          }
        >
          Label
        </Text>
        <View
          style={
            Array [
              Object {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            color="surface.text.normal.lowContrast"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight="l"
            style={
              Array [
                Object {
                  "color": "hsla(217, 56%, 17%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      marginBottom="spacing.2"
      style={
        Array [
          Object {
            "marginBottom": 4,
          },
        ]
      }
    >
      <Text
        color="surface.text.subdued.lowContrast"
        fontFamily="text"
        fontSize={75}
        fontStyle="normal"
        fontWeight="regular"
        lineHeight="s"
        style={
          Array [
            Object {
              "color": "hsla(217, 18%, 45%, 1)",
              "fontFamily": "Lato",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
              "textDecorationLine": "none",
            },
            Object {},
          ]
        }
      >
        60%
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Label"
    accessibilityRole="progressbar"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 60,
        "text": "60%",
      }
    }
    id="progress-3"
    style={
      Array [
        Object {},
      ]
    }
  >
    <View
      backgroundColor="hsla(216, 15%, 54%, 0.18)"
      height="2px"
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.18)",
            "height": 2,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        backgroundColor="hsla(213, 89%, 56%, 1)"
        progress={60}
        style={
          Array [
            Object {
              "backgroundColor": "hsla(213, 89%, 56%, 1)",
              "height": "100%",
              "width": "60%",
            },
            Object {
              "width": "60%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "height": "100%",
                "opacity": 0,
                "width": "100%",
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        />
      </View>
    </View>
  </View>,
]
`;
